--- a/AndroidBootstrap/src/main/res/values/dimens.xml
+++ b/AndroidBootstrap/src/main/res/values/dimens.xml
@@ -57,5 +57,7 @@
     <dimen name="bootstrap_h6_hori_padding">5.6dp</dimen>
 
     <dimen name="bootstrap_label_corner_radius">3dp</dimen>
+    <dimen name="bootstrap_progress_bar_height">14dp</dimen>
+
 
 </resources>
