--- a/sample/src/main/res/layout/example_bbutton_group.xml
+++ b/sample/src/main/res/layout/example_bbutton_group.xml
@@ -242,5 +242,9 @@
             />
     </com.beardedhen.androidbootstrap.BootstrapButtonGroup>
 
+    <TextView
+        style="@style/description_label"
+        android:text="Dropdown"
+        />
 
 </LinearLayout>
